@@ -2,6 +2,7 @@ Revision history for IO-Async-Loop-Uring
 
 {{$NEXT}}
           - Correctly advertize abilities
+          - Make run_once return undef on error
 
 0.001     2026-01-06 23:56:09+01:00 Europe/Brussels
           - Initial release
